--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ python:
 install:
   - pip install django==1.7.4
   - pip install pytz
+  - pip boto
+  - pip install django-storages-redux
+
 
 script: python manage.py test
