Adding a check file type in change_audio_advertising, added python-magic in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
   - pip install pytz
   - pip install boto
   - pip install django-storages-redux
+  - pip install python-magic
 
 
 script: python manage.py test
